--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Federico Puoy",
-  "license": "ISC",
+  "license": "GNU",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "tailwindcss": "^3.0.24"
